--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,11 @@ a {
   text-transform: uppercase;
 }
 
-
+.hide-scroll-bar {
+  overflow: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 
 .hide-scroll-bar::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
@@ -107,7 +111,7 @@ li {
 }
 
 .card-content-container.open {
-  top: 0;
+  
   left: 0;
   right: 0;
   position: fixed;
@@ -135,7 +139,7 @@ li {
 
 .card-open-link {
   position: absolute;
-  top: 0;
+
   left: 0;
   right: 0;
   bottom: 0;
@@ -147,14 +151,14 @@ li {
   left: 0;
   overflow: hidden;
   height: 420px;
-  width: 100%;
+  width: 100vw;
   transform: translateZ(0);
 }
 
 .title-container {
   position: absolute;
-  top: 0;
-  left: 0;
+  bottom: 0;
+  right: 0;
   max-width: 300px;
 }
 
@@ -168,7 +172,7 @@ h2 {
 }
 
 .overlay {
-
+  z-index: 1;
   position: fixed;
   background: rgba(0, 0, 0, 0.8);
   will-change: opacity;
@@ -185,7 +189,7 @@ h2 {
   position: fixed;
   top: 0;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
   left: 50%;
 
   transform: translateX(-50%);
@@ -276,7 +280,7 @@ h2 {
 }
 
 .overlay {
-
+  z-index: 1;
   position: fixed;
   background: rgba(0, 0, 0, 0.8);
   will-change: opacity;
@@ -293,7 +297,7 @@ h2 {
   position: fixed;
   top: 0;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
   left: 50%;
 
   transform: translateX(-50%);
